<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".IgrejaFav">

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_height="900dp"
        android:alpha="0.8"
        app:srcCompat="@drawable/fundo11" />

    <Button
        android:id="@+id/btnIgreja3"
        android:layout_width="305dp"
        android:layout_height="51dp"
        android:backgroundTint="@color/azulbebe"
        android:text="@string/Igreja4"
        app:icon="@drawable/baseline_star_border_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/imageView7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.733" />

    <TextView
        android:id="@+id/txtSuaIgreja"
        android:layout_width="293dp"
        android:layout_height="182dp"
        android:fontFamily="@font/marvel"
        android:text="@string/AcheSuaIgreja"
        android:textAlignment="center"
        android:textColor="@color/amareloAngelical"
        android:textSize="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.44"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.074" />


    <ImageView
        android:id="@+id/imgnuvem1"
        android:layout_width="497dp"
        android:layout_height="112dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/nuvem1" />

    <ImageButton
        android:id="@+id/btnHome"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@color/transp"
        android:contentDescription="@string/AcessibilidadeHome"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.976"
        app:srcCompat="@drawable/outline_church_24" />

    <ImageButton
        android:id="@+id/btnDiario"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="#FFFFFF"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/imgnuvem1"
        app:layout_constraintHorizontal_bias="0.239"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.976"
        app:srcCompat="@drawable/biblifechada"
        tools:ignore="MissingConstraints,SpeakableTextPresentCheck" />

    <ImageButton
        android:id="@+id/btnBiblia"
        android:layout_width="92dp"
        android:layout_height="96dp"

        android:background="@color/transp"
        android:contentDescription="@string/AcessibilidadeBiblia"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/imgnuvem1"
        app:layout_constraintHorizontal_bias="0.462"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/bibliagospel"
        tools:ignore="MissingConstraints" />

    <ImageButton
        android:id="@+id/btnDoar"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="#FFFFFF"
        android:contentDescription="@string/AcessibilidadeDoar"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.766"
        app:layout_constraintStart_toStartOf="@+id/imgnuvem1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.98"
        app:srcCompat="@drawable/baseline_handshake_24"
        tools:ignore="MissingConstraints" />

    <ImageButton
        android:id="@+id/btnPerfil"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_weight="1"
        android:background="@color/transp"
        android:contentDescription="@string/AcessibilidadePerfil"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.955"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.98"
        app:srcCompat="@drawable/baseline_person_24" />

    <Button
        android:id="@+id/btnIgreja1"
        android:layout_width="305dp"
        android:layout_height="51dp"
        android:backgroundTint="@color/azulbebe"
        android:text="@string/Igreja1"
        app:icon="@drawable/baseline_star_border_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/imageView7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.439" />

    <Button
        android:id="@+id/btnIgreja"
        android:layout_width="305dp"
        android:layout_height="51dp"
        android:backgroundTint="@color/azulbebe"
        android:text="@string/Igreja2"
        app:icon="@drawable/baseline_star_border_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/imageView7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.535" />

    <Button
        android:id="@+id/btnIgreja2"
        android:layout_width="305dp"
        android:layout_height="51dp"
        android:backgroundTint="@color/azulbebe"
        android:text="@string/Igreja3"
        app:icon="@drawable/baseline_star_border_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/imageView7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.638" />

</androidx.constraintlayout.widget.ConstraintLayout>